updated fonts for responsive design

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -218,7 +218,7 @@
     }
     .title{
         &_fz48{
-            width: 100%;
+            width: 70%;
             font-size: 26px;
         }
         &_fz36{
@@ -235,7 +235,7 @@
         }
     }
     .promo{
-        background: url('../img/main_bg.jpg') no-repeat 57%/cover;
+        background: url('../img/main_photo_Daria.jpg') no-repeat 57%/cover;
         &__btn{
             margin-top: 30px;
         }
